Fixed list and search bar spacing

--- a/dine-with-me/public/css/styles.css
+++ b/dine-with-me/public/css/styles.css
@@ -28,7 +28,7 @@ main tab-section.active {
   position: fixed;
   width: 100%;
   height: calc(100% - 92px);
-  top: 46px;
+  top: 80px;
   left: 0;
 }
 
@@ -700,7 +700,7 @@ a img{
   /******************** Slidout request list **********************/
   #slideout {
     display: block;  
-    top: 100px;
+    top: 150px;
     z-index: 99;
     position: fixed;
     left: 0;
@@ -719,7 +719,7 @@ a img{
   }
   #slideout_inner {
     position: fixed;
-    top: 100px;
+    top: 150px;
     left: -250px;
     background: #6DAD53;
     width: 200px;
@@ -876,7 +876,8 @@ a img{
         border-color: #4d90fe;
       }
 
-      .controls {
+    /*search bar*/
+    .controls {
     margin-top: 10px;
     border: 1px solid transparent;
     border-radius: 2px 0 0 2px;
